--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react-native-maps": "0.26.1",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
+    "react-native-qrcode-generator": "^1.2.2",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-status-bar-height": "^2.5.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
