--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-qrcode-generator": "^1.2.2",
+    "react-native-qrcode-scanner": "^1.4.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
