--- a/app.json
+++ b/app.json
@@ -21,8 +21,16 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+   
     "ios": {
+      "bundleIdentifier": "com.yourcompany.yourappname",
+      "buildNumber": "1.0.0",
       "supportsTablet": true
+
+    },
+    "android": {
+      "package": "com.yourcompany.yourappname",
+      "versionCode": 1
     }
   }
 }
